# Text-sanitizing

./: .gitignore  README.md  line_deduplication.py  main.py  min_hash.py  pyproject.toml
modules/: entropy.py  min_hash.py
