[project]
name = "sanitazing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasketch>=1.6.5",
    "pandas>=2.2.3",
    "polars>=1.14.0",
    "regex>=2024.11.6",
]

[tool.ruff]
line-length = 80
select = ["ALL"]
ignore = ["D100"]
unfixable = ["F401"]
