[project]
name = "sanitazing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "datasketch>=1.6.5",
    "regex>=2024.11.6",
]

[tool.ruff]
line-length = 80
select = ["ALL"]
ignore = ["D100"]
unfixable = ["F401"]
